test: update users and auth tests
